[tool.pdm]

[project]
name = "chilitools-public"
version = "0.1.0"
description = ""
authors = [
    {name = "Sean Crowe", email = "retrounlocked@gmail.com"},
]
dependencies = [
    "lxml>=4.9.2",
    "requests>=2.28.2",
    "xmltodict>=0.13.0",
    "beautifulsoup4>=4.11.2",
    "coloredlogs>=15.0.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
